<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewContact">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_contact_heading"
        android:id="@+id/new_contact_heading"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"/>
    <ImageButton
        android:id="@+id/save_new_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/save_new_contact_desc"
        android:src="@drawable/ic_save"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/off_white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/save_new_contact"
        android:id="@+id/first_row"
        style="@style/row_style">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            style="@style/label_style" />
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/new_contact_name"
            android:contentDescription="@string/name_contact_desc"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/first_row"
        style="@style/row_style">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_label"
            style="@style/label_style"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/phone_number"
            android:contentDescription="@string/phone_content_desc" />
    </LinearLayout>
</RelativeLayout>