<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewContact">
    <ImageButton
        android:id="@+id/dial_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_phone"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/dial_number_desc"
        android:backgroundTint="@color/off_white"/>
    <ImageButton
        android:id="@+id/edit_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/edit_save_desc"
        android:backgroundTint="@color/off_white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/edit_save"
        android:id="@+id/vc_first_row"
        style="@style/row_style">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:id="@+id/view_contact_name_label"
            style="@style/label_style"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/view_contact_name"
            android:contentDescription="@string/view_contact_name_desc"
            android:inputType="text"
            android:enabled="false" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/vc_first_row"
        style="@style/row_style">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/view_contact_phone_label"
            android:text="@string/phone_label"
            style="@style/label_style"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/view_phone_number"
            android:contentDescription="@string/view_phone_content_desc"
            android:enabled="false" />
    </LinearLayout>
</RelativeLayout>